--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,47 @@
 
 body{
-    font-family:"montserrat-black";
+    font-family:"montserrat-bold";
+    text-align: center;
 }
 
-#title{
-    background-color:#ff4c68 ;
-    color: #fff;
-}
-
-.container-fluid{
-    padding: 3% 15% ;
-}
-
-h1{
-    font-family:"Montserrat";
-    font-size: 3.5rem;
-    line-height: 1.5;
-}
-
-h2{
-    font-family: "montserrat";
-    font-size: 3rem;
-    line-height: 1.5;
-}
-
-h3{
-    font-family: "montserrat";
-    font-size: 1.5rem;
+h1, h2, h3, h4, h5, h6{
+    font-family: "montserrat-bold";
 }
 
 p{
     color: #8f8f8f;
+}
+
+/* Containers */
+
+.container-fluid{
+    padding: 7% 15%;
+
+}
+
+/* Sections */
+
+.colored-section{
+    background-color:#ff4c68 ;
+    color: #fff;
+}
+
+.white-section{
+    background-color:#fff;
+}
+
+
+/*  Heading */
+
+.big-heading{
+    font-family:"Montserrat-bold";
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+
+.section-heading{
+    font-size: 3.5rem;
+    line-height: 1.5;
 }
 
 /*Navigation Bar*/
@@ -60,21 +71,36 @@ p{
     margin: 5% 3% 5% 0;
 }
 
+/* Title Section */
+
+#title .container-fluid{
+    padding: 3% 15% 7%;
+    text-align: left;
+}
+
 /*Title Image*/
 
 .title-image{
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
 }
 
  /*features section*/
 
  #features{
-     padding: 7% 15%;
+    
+     
+     position: relative;
+     z-index: 1 ;
+ }
+
+ .feature-title{
+    font-size: 1.5rem;
  }
 
  .feature-box{
- text-align: center;
  padding: 5%;
  }
 
@@ -91,10 +117,13 @@ p{
  /* Testimonials*/
 
 #testimonials{
-    
-    text-align: center;
-    background-color: #ef8172;
-    color: #fff;
+   background-color: #ef8172;
+
+}
+
+.testimonial-text{
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 .testimonial-image{
@@ -103,13 +132,8 @@ p{
     margin: 20px;
 }
  
-.carousel-item{
-    padding: 7% 15%;
-}
-
 #press{
     background-color: #ef8172;
-    text-align: center; 
     padding-bottom: 3%;
 }
 
@@ -122,9 +146,36 @@ p{
 
 #pricing{
     padding: 100px;
-    text-align: center;
+}
+
+.price-text{
+    font-family: montserrat-bold;
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 .pricing-column{
     padding: 3% 2%;
 }
+
+
+#footer{
+    background-color: #fff;
+}
+
+.social-icons {
+    margin: 20px 10px;
+}
+
+@media (max-width:1028px){
+#title{
+    text-align: center;
+}
+
+.title-image{
+    position: static;
+    transform: rotate(0);
+}
+}
+
+
